exp3/parse.output
Nonterminals useless in grammar

    SP
    C
    CP


Terminals unused in grammar

    WHILE
    IF
    THEN
    ELSE
    DO
    '<'
    '>'


Rules useless in grammar

   26 SP: S
   27   | S LABEL ELSE LABEL S

   28 C: E CP
   29  | E error CP
   30  | error CP

   31 CP: '>' E
   32   | '<' E
   33   | '=' E
   34   | '>' error E
   35   | '<' error E
   36   | '=' error E


Grammar

    0 $accept: P $end

    1 P: L
    2  | L P

    3 L: S ';' LABEL

    4 S: IDN '=' E
    5  | IDN error '=' E

    6 E: T
    7  | E '+' T
    8  | E '-' T
    9  | E '+' error T
   10  | E '-' error T

   11 T: F
   12  | T '*' F
   13  | T '/' F
   14  | T '*' error F
   15  | T '/' error F

   16 F: '(' E ')'
   17  | IDN
   18  | INT8
   19  | INT10
   20  | INT16
   21  | FLOAT8
   22  | FLOAT10
   23  | FLOAT16
   24  | '(' E error

   25 LABEL: %empty


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 16 24
    ')' (41) 16
    '*' (42) 12 14
    '+' (43) 7 9
    '-' (45) 8 10
    '/' (47) 13 15
    ';' (59) 3
    '<' (60)
    '=' (61) 4 5
    '>' (62)
    error (256) 5 9 10 14 15 24
    WHILE (258)
    IF (259)
    THEN (260)
    ELSE (261)
    DO (262)
    IDN <str_val> (263) 4 5 17
    INT8 <int_val> (264) 18
    INT10 <int_val> (265) 19
    INT16 <int_val> (266) 20
    FLOAT8 <double_val> (267) 21
    FLOAT10 <double_val> (268) 22
    FLOAT16 <double_val> (269) 23


Nonterminals, with rules where they appear

    $accept (25)
        on left: 0
    P <node> (26)
        on left: 1 2
        on right: 0 2
    L <node> (27)
        on left: 3
        on right: 1 2
    S <node> (28)
        on left: 4 5
        on right: 3
    E <node> (29)
        on left: 6 7 8 9 10
        on right: 4 5 7 8 9 10 16 24
    T <node> (30)
        on left: 11 12 13 14 15
        on right: 6 7 8 9 10 12 13 14 15
    F <node> (31)
        on left: 16 17 18 19 20 21 22 23 24
        on right: 11 12 13 14 15
    LABEL <int_val> (32)
        on left: 25
        on right: 3


State 0

    0 $accept: . P $end

    IDN  shift, and go to state 1

    P  go to state 2
    L  go to state 3
    S  go to state 4


State 1

    4 S: IDN . '=' E
    5  | IDN . error '=' E

    error  shift, and go to state 5
    '='    shift, and go to state 6


State 2

    0 $accept: P . $end

    $end  shift, and go to state 7


State 3

    1 P: L .
    2  | L . P

    IDN  shift, and go to state 1

    $default  reduce using rule 1 (P)

    P  go to state 8
    L  go to state 3
    S  go to state 4


State 4

    3 L: S . ';' LABEL

    ';'  shift, and go to state 9


State 5

    5 S: IDN error . '=' E

    '='  shift, and go to state 10


State 6

    4 S: IDN '=' . E

    IDN      shift, and go to state 11
    INT8     shift, and go to state 12
    INT10    shift, and go to state 13
    INT16    shift, and go to state 14
    FLOAT8   shift, and go to state 15
    FLOAT10  shift, and go to state 16
    FLOAT16  shift, and go to state 17
    '('      shift, and go to state 18

    E  go to state 19
    T  go to state 20
    F  go to state 21


State 7

    0 $accept: P $end .

    $default  accept


State 8

    2 P: L P .

    $default  reduce using rule 2 (P)


State 9

    3 L: S ';' . LABEL

    $default  reduce using rule 25 (LABEL)

    LABEL  go to state 22


State 10

    5 S: IDN error '=' . E

    IDN      shift, and go to state 11
    INT8     shift, and go to state 12
    INT10    shift, and go to state 13
    INT16    shift, and go to state 14
    FLOAT8   shift, and go to state 15
    FLOAT10  shift, and go to state 16
    FLOAT16  shift, and go to state 17
    '('      shift, and go to state 18

    E  go to state 23
    T  go to state 20
    F  go to state 21


State 11

   17 F: IDN .

    $default  reduce using rule 17 (F)


State 12

   18 F: INT8 .

    $default  reduce using rule 18 (F)


State 13

   19 F: INT10 .

    $default  reduce using rule 19 (F)


State 14

   20 F: INT16 .

    $default  reduce using rule 20 (F)


State 15

   21 F: FLOAT8 .

    $default  reduce using rule 21 (F)


State 16

   22 F: FLOAT10 .

    $default  reduce using rule 22 (F)


State 17

   23 F: FLOAT16 .

    $default  reduce using rule 23 (F)


State 18

   16 F: '(' . E ')'
   24  | '(' . E error

    IDN      shift, and go to state 11
    INT8     shift, and go to state 12
    INT10    shift, and go to state 13
    INT16    shift, and go to state 14
    FLOAT8   shift, and go to state 15
    FLOAT10  shift, and go to state 16
    FLOAT16  shift, and go to state 17
    '('      shift, and go to state 18

    E  go to state 24
    T  go to state 20
    F  go to state 21


State 19

    4 S: IDN '=' E .
    7 E: E . '+' T
    8  | E . '-' T
    9  | E . '+' error T
   10  | E . '-' error T

    '+'  shift, and go to state 25
    '-'  shift, and go to state 26

    $default  reduce using rule 4 (S)


State 20

    6 E: T .
   12 T: T . '*' F
   13  | T . '/' F
   14  | T . '*' error F
   15  | T . '/' error F

    '*'  shift, and go to state 27
    '/'  shift, and go to state 28

    $default  reduce using rule 6 (E)


State 21

   11 T: F .

    $default  reduce using rule 11 (T)


State 22

    3 L: S ';' LABEL .

    $default  reduce using rule 3 (L)


State 23

    5 S: IDN error '=' E .
    7 E: E . '+' T
    8  | E . '-' T
    9  | E . '+' error T
   10  | E . '-' error T

    '+'  shift, and go to state 25
    '-'  shift, and go to state 26

    $default  reduce using rule 5 (S)


State 24

    7 E: E . '+' T
    8  | E . '-' T
    9  | E . '+' error T
   10  | E . '-' error T
   16 F: '(' E . ')'
   24  | '(' E . error

    error  shift, and go to state 29
    '+'    shift, and go to state 25
    '-'    shift, and go to state 26
    ')'    shift, and go to state 30


State 25

    7 E: E '+' . T
    9  | E '+' . error T

    error    shift, and go to state 31
    IDN      shift, and go to state 11
    INT8     shift, and go to state 12
    INT10    shift, and go to state 13
    INT16    shift, and go to state 14
    FLOAT8   shift, and go to state 15
    FLOAT10  shift, and go to state 16
    FLOAT16  shift, and go to state 17
    '('      shift, and go to state 18

    T  go to state 32
    F  go to state 21


State 26

    8 E: E '-' . T
   10  | E '-' . error T

    error    shift, and go to state 33
    IDN      shift, and go to state 11
    INT8     shift, and go to state 12
    INT10    shift, and go to state 13
    INT16    shift, and go to state 14
    FLOAT8   shift, and go to state 15
    FLOAT10  shift, and go to state 16
    FLOAT16  shift, and go to state 17
    '('      shift, and go to state 18

    T  go to state 34
    F  go to state 21


State 27

   12 T: T '*' . F
   14  | T '*' . error F

    error    shift, and go to state 35
    IDN      shift, and go to state 11
    INT8     shift, and go to state 12
    INT10    shift, and go to state 13
    INT16    shift, and go to state 14
    FLOAT8   shift, and go to state 15
    FLOAT10  shift, and go to state 16
    FLOAT16  shift, and go to state 17
    '('      shift, and go to state 18

    F  go to state 36


State 28

   13 T: T '/' . F
   15  | T '/' . error F

    error    shift, and go to state 37
    IDN      shift, and go to state 11
    INT8     shift, and go to state 12
    INT10    shift, and go to state 13
    INT16    shift, and go to state 14
    FLOAT8   shift, and go to state 15
    FLOAT10  shift, and go to state 16
    FLOAT16  shift, and go to state 17
    '('      shift, and go to state 18

    F  go to state 38


State 29

   24 F: '(' E error .

    $default  reduce using rule 24 (F)


State 30

   16 F: '(' E ')' .

    $default  reduce using rule 16 (F)


State 31

    9 E: E '+' error . T

    IDN      shift, and go to state 11
    INT8     shift, and go to state 12
    INT10    shift, and go to state 13
    INT16    shift, and go to state 14
    FLOAT8   shift, and go to state 15
    FLOAT10  shift, and go to state 16
    FLOAT16  shift, and go to state 17
    '('      shift, and go to state 18

    T  go to state 39
    F  go to state 21


State 32

    7 E: E '+' T .
   12 T: T . '*' F
   13  | T . '/' F
   14  | T . '*' error F
   15  | T . '/' error F

    '*'  shift, and go to state 27
    '/'  shift, and go to state 28

    $default  reduce using rule 7 (E)


State 33

   10 E: E '-' error . T

    IDN      shift, and go to state 11
    INT8     shift, and go to state 12
    INT10    shift, and go to state 13
    INT16    shift, and go to state 14
    FLOAT8   shift, and go to state 15
    FLOAT10  shift, and go to state 16
    FLOAT16  shift, and go to state 17
    '('      shift, and go to state 18

    T  go to state 40
    F  go to state 21


State 34

    8 E: E '-' T .
   12 T: T . '*' F
   13  | T . '/' F
   14  | T . '*' error F
   15  | T . '/' error F

    '*'  shift, and go to state 27
    '/'  shift, and go to state 28

    $default  reduce using rule 8 (E)


State 35

   14 T: T '*' error . F

    IDN      shift, and go to state 11
    INT8     shift, and go to state 12
    INT10    shift, and go to state 13
    INT16    shift, and go to state 14
    FLOAT8   shift, and go to state 15
    FLOAT10  shift, and go to state 16
    FLOAT16  shift, and go to state 17
    '('      shift, and go to state 18

    F  go to state 41


State 36

   12 T: T '*' F .

    $default  reduce using rule 12 (T)


State 37

   15 T: T '/' error . F

    IDN      shift, and go to state 11
    INT8     shift, and go to state 12
    INT10    shift, and go to state 13
    INT16    shift, and go to state 14
    FLOAT8   shift, and go to state 15
    FLOAT10  shift, and go to state 16
    FLOAT16  shift, and go to state 17
    '('      shift, and go to state 18

    F  go to state 42


State 38

   13 T: T '/' F .

    $default  reduce using rule 13 (T)


State 39

    9 E: E '+' error T .
   12 T: T . '*' F
   13  | T . '/' F
   14  | T . '*' error F
   15  | T . '/' error F

    '*'  shift, and go to state 27
    '/'  shift, and go to state 28

    $default  reduce using rule 9 (E)


State 40

   10 E: E '-' error T .
   12 T: T . '*' F
   13  | T . '/' F
   14  | T . '*' error F
   15  | T . '/' error F

    '*'  shift, and go to state 27
    '/'  shift, and go to state 28

    $default  reduce using rule 10 (E)


State 41

   14 T: T '*' error F .

    $default  reduce using rule 14 (T)


State 42

   15 T: T '/' error F .

    $default  reduce using rule 15 (T)
